cluster/invidious/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
  namespace: invidious
  labels:
    app: invidious
spec:
  replicas: 2
  selector:
    matchLabels:
      app: invidious
  template:
    metadata:
      labels:
        app: invidious
    spec:
      containers:
        - image: quay.io/invidious/invidious:2024.04.26-eda7444-arm64
          name: invidious
          readinessProbe:
            httpGet:
              path: /api/v1/stats
              port: 3000
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/v1/stats
              port: 3000
            periodSeconds: 5
            failureThreshold: 2
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 192Mi
            limits:
              cpu: '2'
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /config
      enableServiceLinks: false
      volumes:
        - name: config-template
          configMap:
            name: config
        - name: config
          emptyDir: {}
