cluster/invidious/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: invidious
  name: invidious
  namespace: invidious
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: invidious
